--- a/.scribe/endpoints.cache/12.yaml
+++ b/.scribe/endpoints.cache/12.yaml
@@ -109,7 +109,7 @@ endpoints:
         name: finance_company_num
         description: validation.attributes.finance_company_num.
         required: true
-        example: aut
+        example: adipisci
         type: string
         enumValues: []
         custom: []
@@ -117,7 +117,7 @@ endpoints:
         name: fin_type
         description: '금융 VAN 타입.'
         required: true
-        example: vero
+        example: eum
         type: string
         enumValues: []
         custom: []
@@ -125,7 +125,7 @@ endpoints:
         name: dev_fee
         description: '개발사 수수료.'
         required: true
-        example: 2742436.0581949
+        example: 150.1
         type: number
         enumValues: []
         custom: []
@@ -165,7 +165,7 @@ endpoints:
         name: min_balance_limit
         description: '유보금미달알림 하한금.'
         required: true
-        example: modi
+        example: quia
         type: string
         enumValues: []
         custom: []
@@ -181,7 +181,7 @@ endpoints:
         name: corp_name
         description: 법인명.
         required: true
-        example: eaque
+        example: eius
         type: string
         enumValues: []
         custom: []
@@ -197,7 +197,7 @@ endpoints:
         name: nick_name
         description: 유저명(별칭).
         required: true
-        example: rerum
+        example: laudantium
         type: string
         enumValues: []
         custom: []
@@ -210,12 +210,12 @@ endpoints:
         enumValues: []
         custom: []
     cleanBodyParameters:
-      finance_company_num: aut
-      fin_type: vero
-      dev_fee: 2742436.0581949
-      min_balance_limit: modi
-      corp_name: eaque
-      nick_name: rerum
+      finance_company_num: adipisci
+      fin_type: eum
+      dev_fee: 150.1
+      min_balance_limit: quia
+      corp_name: eius
+      nick_name: laudantium
     fileParameters: []
     responses: []
     responseFields: []
@@ -247,12 +247,12 @@ endpoints:
         name: id
         description: '금융 VAN PK'
         required: true
-        example: 5
+        example: 11
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 5
+      id: 11
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -298,12 +298,12 @@ endpoints:
         name: id
         description: '금융 VAN PK'
         required: true
-        example: 17
+        example: 15
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 17
+      id: 15
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -311,7 +311,7 @@ endpoints:
         name: finance_company_num
         description: validation.attributes.finance_company_num.
         required: true
-        example: sint
+        example: est
         type: string
         enumValues: []
         custom: []
@@ -319,7 +319,7 @@ endpoints:
         name: fin_type
         description: '금융 VAN 타입.'
         required: true
-        example: nisi
+        example: fuga
         type: string
         enumValues: []
         custom: []
@@ -327,7 +327,7 @@ endpoints:
         name: dev_fee
         description: '개발사 수수료.'
         required: true
-        example: 173769.927
+        example: 19.007165443
         type: number
         enumValues: []
         custom: []
@@ -367,7 +367,7 @@ endpoints:
         name: min_balance_limit
         description: '유보금미달알림 하한금.'
         required: true
-        example: est
+        example: sit
         type: string
         enumValues: []
         custom: []
@@ -383,7 +383,7 @@ endpoints:
         name: corp_name
         description: 법인명.
         required: true
-        example: voluptatum
+        example: omnis
         type: string
         enumValues: []
         custom: []
@@ -399,7 +399,7 @@ endpoints:
         name: nick_name
         description: 유저명(별칭).
         required: true
-        example: harum
+        example: excepturi
         type: string
         enumValues: []
         custom: []
@@ -412,12 +412,12 @@ endpoints:
         enumValues: []
         custom: []
     cleanBodyParameters:
-      finance_company_num: sint
-      fin_type: nisi
-      dev_fee: 173769.927
-      min_balance_limit: est
-      corp_name: voluptatum
-      nick_name: harum
+      finance_company_num: est
+      fin_type: fuga
+      dev_fee: 19.007165443
+      min_balance_limit: sit
+      corp_name: omnis
+      nick_name: excepturi
     fileParameters: []
     responses: []
     responseFields: []
@@ -449,12 +449,12 @@ endpoints:
         name: id
         description: '금융VAN PK'
         required: true
-        example: 16
+        example: 2
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 16
+      id: 2
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
