--- a/.scribe/endpoints.cache/23.yaml
+++ b/.scribe/endpoints.cache/23.yaml
@@ -155,7 +155,7 @@ endpoints:
         name: id
         description: ''
         required: true
-        example: 1
+        example: 6
         type: integer
         enumValues: []
         custom: []
@@ -163,13 +163,13 @@ endpoints:
         name: user_pw
         description: ''
         required: true
-        example: est
+        example: maxime
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      id: 1
-      user_pw: est
+      id: 6
+      user_pw: maxime
     fileParameters: []
     responses: []
     responseFields: []
@@ -267,7 +267,7 @@ endpoints:
         name: search
         description: '검색어(유저 ID)'
         required: false
-        example: explicabo
+        example: odio
         type: string
         enumValues: []
         custom: []
@@ -276,7 +276,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-10-14'
       e_dt: '2023-10-15'
-      search: explicabo
+      search: odio
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -323,7 +323,7 @@ endpoints:
         name: user_name
         description: '유저 ID.'
         required: true
-        example: veniam
+        example: aspernatur
         type: string
         enumValues: []
         custom: []
@@ -339,7 +339,7 @@ endpoints:
         name: sales_name
         description: '영업점 상호.'
         required: true
-        example: quo
+        example: quos
         type: string
         enumValues: []
         custom: []
@@ -347,7 +347,7 @@ endpoints:
         name: view_type
         description: validation.attributes.view_type.
         required: true
-        example: odio
+        example: reiciendis
         type: string
         enumValues: []
         custom: []
@@ -355,7 +355,7 @@ endpoints:
         name: level
         description: 유저등급.
         required: true
-        example: cumque
+        example: aut
         type: string
         enumValues: []
         custom: []
@@ -379,7 +379,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: consectetur
+        example: omnis
         type: string
         enumValues: []
         custom: []
@@ -427,7 +427,7 @@ endpoints:
         name: settle_tax_type
         description: validation.attributes.settle_tax_type.
         required: true
-        example: laudantium
+        example: quo
         type: string
         enumValues: []
         custom: []
@@ -435,7 +435,7 @@ endpoints:
         name: settle_cycle
         description: validation.attributes.settle_cycle.
         required: true
-        example: quam
+        example: ut
         type: string
         enumValues: []
         custom: []
@@ -499,19 +499,19 @@ endpoints:
         name: user_pw
         description: '유저 패스워드'
         required: false
-        example: enim
+        example: aut
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: veniam
-      sales_name: quo
-      view_type: odio
-      level: cumque
-      acct_bank_name: consectetur
-      settle_tax_type: laudantium
-      settle_cycle: quam
-      user_pw: enim
+      user_name: aspernatur
+      sales_name: quos
+      view_type: reiciendis
+      level: aut
+      acct_bank_name: omnis
+      settle_tax_type: quo
+      settle_cycle: ut
+      user_pw: aut
     fileParameters:
       passbook_file: null
       contract_file: null
@@ -548,12 +548,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 7
+        example: 18
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 7
+      id: 18
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -599,12 +599,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 5
+        example: 8
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 5
+      id: 8
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -612,7 +612,7 @@ endpoints:
         name: user_name
         description: '유저 ID.'
         required: true
-        example: quas
+        example: adipisci
         type: string
         enumValues: []
         custom: []
@@ -628,7 +628,7 @@ endpoints:
         name: sales_name
         description: '영업점 상호.'
         required: true
-        example: nemo
+        example: hic
         type: string
         enumValues: []
         custom: []
@@ -636,7 +636,7 @@ endpoints:
         name: view_type
         description: validation.attributes.view_type.
         required: true
-        example: provident
+        example: perferendis
         type: string
         enumValues: []
         custom: []
@@ -644,7 +644,7 @@ endpoints:
         name: level
         description: 유저등급.
         required: true
-        example: blanditiis
+        example: qui
         type: string
         enumValues: []
         custom: []
@@ -668,7 +668,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: quibusdam
+        example: voluptatem
         type: string
         enumValues: []
         custom: []
@@ -716,7 +716,7 @@ endpoints:
         name: settle_tax_type
         description: validation.attributes.settle_tax_type.
         required: true
-        example: provident
+        example: quo
         type: string
         enumValues: []
         custom: []
@@ -724,7 +724,7 @@ endpoints:
         name: settle_cycle
         description: validation.attributes.settle_cycle.
         required: true
-        example: quis
+        example: nulla
         type: string
         enumValues: []
         custom: []
@@ -785,13 +785,13 @@ endpoints:
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: quas
-      sales_name: nemo
-      view_type: provident
-      level: blanditiis
-      acct_bank_name: quibusdam
-      settle_tax_type: provident
-      settle_cycle: quis
+      user_name: adipisci
+      sales_name: hic
+      view_type: perferendis
+      level: qui
+      acct_bank_name: voluptatem
+      settle_tax_type: quo
+      settle_cycle: nulla
     fileParameters:
       passbook_file: null
       contract_file: null
@@ -828,12 +828,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 14
+        example: 9
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 14
+      id: 9
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
