--- a/.scribe/endpoints.cache/28.yaml
+++ b/.scribe/endpoints.cache/28.yaml
@@ -71,12 +71,12 @@ endpoints:
         name: search
         description: '검색어(유저 ID)'
         required: false
-        example: aut
+        example: et
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
-      search: aut
+      search: et
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -119,12 +119,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 6
+        example: 11
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 6
+      id: 11
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -169,12 +169,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 7
+        example: 5
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 7
+      id: 5
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -340,7 +340,7 @@ endpoints:
         name: search
         description: '검색어(mid, tid)'
         required: false
-        example: qui
+        example: tempora
         type: string
         enumValues: []
         custom: []
@@ -357,7 +357,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-10-14'
       e_dt: '2023-10-15'
-      search: qui
+      search: tempora
       module_type: 3
     bodyParameters: []
     cleanBodyParameters: []
@@ -405,7 +405,7 @@ endpoints:
         name: mcht_id
         description: 가맹점.
         required: true
-        example: deserunt
+        example: et
         type: string
         enumValues: []
         custom: []
@@ -413,7 +413,7 @@ endpoints:
         name: pg_id
         description: PG사.
         required: true
-        example: qui
+        example: harum
         type: string
         enumValues: []
         custom: []
@@ -421,7 +421,7 @@ endpoints:
         name: ps_id
         description: 구간.
         required: true
-        example: rerum
+        example: sapiente
         type: string
         enumValues: []
         custom: []
@@ -429,7 +429,7 @@ endpoints:
         name: settle_fee
         description: '입금 수수료.'
         required: true
-        example: quia
+        example: enim
         type: string
         enumValues: []
         custom: []
@@ -453,7 +453,7 @@ endpoints:
         name: module_type
         description: '결제모듈 타입.'
         required: true
-        example: molestiae
+        example: officiis
         type: string
         enumValues: []
         custom: []
@@ -509,7 +509,7 @@ endpoints:
         name: comm_settle_fee
         description: 통신비.
         required: true
-        example: 896.0933
+        example: 37179.402641
         type: number
         enumValues: []
         custom: []
@@ -549,7 +549,7 @@ endpoints:
         name: abnormal_trans_limit
         description: '이상거래 상한금.'
         required: true
-        example: corporis
+        example: odit
         type: string
         enumValues: []
         custom: []
@@ -557,7 +557,7 @@ endpoints:
         name: pay_dupe_limit
         description: '중복결제 허용회수.'
         required: true
-        example: rem
+        example: necessitatibus
         type: string
         enumValues: []
         custom: []
@@ -565,7 +565,7 @@ endpoints:
         name: pay_dupe_least
         description: '중복결제 하한금.'
         required: true
-        example: aliquid
+        example: quod
         type: string
         enumValues: []
         custom: []
@@ -597,7 +597,7 @@ endpoints:
         name: pay_year_limit
         description: '연 결제 한도.'
         required: true
-        example: quo
+        example: labore
         type: string
         enumValues: []
         custom: []
@@ -605,7 +605,7 @@ endpoints:
         name: pay_month_limit
         description: '월 결제 한도.'
         required: true
-        example: dolor
+        example: saepe
         type: string
         enumValues: []
         custom: []
@@ -613,7 +613,7 @@ endpoints:
         name: pay_day_limit
         description: '일 결제 한도.'
         required: true
-        example: quidem
+        example: ut
         type: string
         enumValues: []
         custom: []
@@ -621,7 +621,7 @@ endpoints:
         name: pay_single_limit
         description: '단건 결제 한도.'
         required: true
-        example: tempora
+        example: provident
         type: string
         enumValues: []
         custom: []
@@ -645,7 +645,7 @@ endpoints:
         name: installment
         description: 할부.
         required: true
-        example: iste
+        example: sequi
         type: string
         enumValues: []
         custom: []
@@ -653,7 +653,7 @@ endpoints:
         name: note
         description: 비고.
         required: true
-        example: quis
+        example: tempore
         type: string
         enumValues: []
         custom: []
@@ -661,7 +661,7 @@ endpoints:
         name: is_old_auth
         description: '비인증/구인증 여부.'
         required: true
-        example: nisi
+        example: saepe
         type: string
         enumValues: []
         custom: []
@@ -669,7 +669,7 @@ endpoints:
         name: use_realtime_deposit
         description: validation.attributes.use_realtime_deposit.
         required: true
-        example: et
+        example: magnam
         type: string
         enumValues: []
         custom: []
@@ -677,30 +677,30 @@ endpoints:
         name: show_pay_view
         description: '결제창 노출여부.'
         required: true
-        example: et
+        example: alias
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      mcht_id: deserunt
-      pg_id: qui
-      ps_id: rerum
-      settle_fee: quia
+      mcht_id: et
+      pg_id: harum
+      ps_id: sapiente
+      settle_fee: enim
       settle_type: veritatis
-      module_type: molestiae
-      comm_settle_fee: 896.0933
-      abnormal_trans_limit: corporis
-      pay_dupe_limit: rem
-      pay_dupe_least: aliquid
-      pay_year_limit: quo
-      pay_month_limit: dolor
-      pay_day_limit: quidem
-      pay_single_limit: tempora
-      installment: iste
-      note: quis
-      is_old_auth: nisi
-      use_realtime_deposit: et
-      show_pay_view: et
+      module_type: officiis
+      comm_settle_fee: 37179.402641
+      abnormal_trans_limit: odit
+      pay_dupe_limit: necessitatibus
+      pay_dupe_least: quod
+      pay_year_limit: labore
+      pay_month_limit: saepe
+      pay_day_limit: ut
+      pay_single_limit: provident
+      installment: sequi
+      note: tempore
+      is_old_auth: saepe
+      use_realtime_deposit: magnam
+      show_pay_view: alias
     fileParameters: []
     responses: []
     responseFields: []
@@ -732,12 +732,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 2
+        example: 5
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 2
+      id: 5
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -783,12 +783,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 16
+        example: 10
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 16
+      id: 10
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -796,7 +796,7 @@ endpoints:
         name: mcht_id
         description: 가맹점.
         required: true
-        example: eos
+        example: incidunt
         type: string
         enumValues: []
         custom: []
@@ -804,7 +804,7 @@ endpoints:
         name: pg_id
         description: PG사.
         required: true
-        example: nobis
+        example: id
         type: string
         enumValues: []
         custom: []
@@ -812,7 +812,7 @@ endpoints:
         name: ps_id
         description: 구간.
         required: true
-        example: sed
+        example: vel
         type: string
         enumValues: []
         custom: []
@@ -820,7 +820,7 @@ endpoints:
         name: settle_fee
         description: '입금 수수료.'
         required: true
-        example: est
+        example: quo
         type: string
         enumValues: []
         custom: []
@@ -828,7 +828,7 @@ endpoints:
         name: settle_type
         description: 정산일.
         required: true
-        example: id
+        example: eligendi
         type: string
         enumValues: []
         custom: []
@@ -844,7 +844,7 @@ endpoints:
         name: module_type
         description: '결제모듈 타입.'
         required: true
-        example: non
+        example: qui
         type: string
         enumValues: []
         custom: []
@@ -900,7 +900,7 @@ endpoints:
         name: comm_settle_fee
         description: 통신비.
         required: true
-        example: 1301864.526597
+        example: 163.3
         type: number
         enumValues: []
         custom: []
@@ -940,7 +940,7 @@ endpoints:
         name: abnormal_trans_limit
         description: '이상거래 상한금.'
         required: true
-        example: nostrum
+        example: rerum
         type: string
         enumValues: []
         custom: []
@@ -948,7 +948,7 @@ endpoints:
         name: pay_dupe_limit
         description: '중복결제 허용회수.'
         required: true
-        example: ratione
+        example: rem
         type: string
         enumValues: []
         custom: []
@@ -956,7 +956,7 @@ endpoints:
         name: pay_dupe_least
         description: '중복결제 하한금.'
         required: true
-        example: ut
+        example: at
         type: string
         enumValues: []
         custom: []
@@ -988,7 +988,7 @@ endpoints:
         name: pay_year_limit
         description: '연 결제 한도.'
         required: true
-        example: odit
+        example: perspiciatis
         type: string
         enumValues: []
         custom: []
@@ -996,7 +996,7 @@ endpoints:
         name: pay_month_limit
         description: '월 결제 한도.'
         required: true
-        example: cupiditate
+        example: minima
         type: string
         enumValues: []
         custom: []
@@ -1004,7 +1004,7 @@ endpoints:
         name: pay_day_limit
         description: '일 결제 한도.'
         required: true
-        example: quasi
+        example: alias
         type: string
         enumValues: []
         custom: []
@@ -1012,7 +1012,7 @@ endpoints:
         name: pay_single_limit
         description: '단건 결제 한도.'
         required: true
-        example: soluta
+        example: dolorem
         type: string
         enumValues: []
         custom: []
@@ -1036,7 +1036,7 @@ endpoints:
         name: installment
         description: 할부.
         required: true
-        example: quisquam
+        example: adipisci
         type: string
         enumValues: []
         custom: []
@@ -1044,7 +1044,7 @@ endpoints:
         name: note
         description: 비고.
         required: true
-        example: quo
+        example: numquam
         type: string
         enumValues: []
         custom: []
@@ -1052,7 +1052,7 @@ endpoints:
         name: is_old_auth
         description: '비인증/구인증 여부.'
         required: true
-        example: sint
+        example: qui
         type: string
         enumValues: []
         custom: []
@@ -1060,7 +1060,7 @@ endpoints:
         name: use_realtime_deposit
         description: validation.attributes.use_realtime_deposit.
         required: true
-        example: ut
+        example: possimus
         type: string
         enumValues: []
         custom: []
@@ -1068,30 +1068,30 @@ endpoints:
         name: show_pay_view
         description: '결제창 노출여부.'
         required: true
-        example: nulla
+        example: sed
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      mcht_id: eos
-      pg_id: nobis
-      ps_id: sed
-      settle_fee: est
-      settle_type: id
-      module_type: non
-      comm_settle_fee: 1301864.526597
-      abnormal_trans_limit: nostrum
-      pay_dupe_limit: ratione
-      pay_dupe_least: ut
-      pay_year_limit: odit
-      pay_month_limit: cupiditate
-      pay_day_limit: quasi
-      pay_single_limit: soluta
-      installment: quisquam
-      note: quo
-      is_old_auth: sint
-      use_realtime_deposit: ut
-      show_pay_view: nulla
+      mcht_id: incidunt
+      pg_id: id
+      ps_id: vel
+      settle_fee: quo
+      settle_type: eligendi
+      module_type: qui
+      comm_settle_fee: 163.3
+      abnormal_trans_limit: rerum
+      pay_dupe_limit: rem
+      pay_dupe_least: at
+      pay_year_limit: perspiciatis
+      pay_month_limit: minima
+      pay_day_limit: alias
+      pay_single_limit: dolorem
+      installment: adipisci
+      note: numquam
+      is_old_auth: qui
+      use_realtime_deposit: possimus
+      show_pay_view: sed
     fileParameters: []
     responses: []
     responseFields: []
@@ -1123,12 +1123,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 14
+        example: 1
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 14
+      id: 1
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
