--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -26,12 +26,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 2
+        example: 14
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 2
+      id: 14
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -121,12 +121,12 @@ endpoints:
         name: search
         description: '검색어(유저 ID)'
         required: false
-        example: occaecati
+        example: voluptatem
         type: string
         enumValues: []
         custom: []
     cleanQueryParameters:
-      search: occaecati
+      search: voluptatem
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -173,7 +173,7 @@ endpoints:
         name: id
         description: ''
         required: true
-        example: 16
+        example: 20
         type: integer
         enumValues: []
         custom: []
@@ -181,13 +181,13 @@ endpoints:
         name: user_pw
         description: ''
         required: true
-        example: ipsa
+        example: officia
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      id: 16
-      user_pw: ipsa
+      id: 20
+      user_pw: officia
     fileParameters: []
     responses: []
     responseFields: []
@@ -285,7 +285,7 @@ endpoints:
         name: search
         description: '검색어(가맹점상호, 휴대폰번호, 대표자명)'
         required: false
-        example: aut
+        example: asperiores
         type: string
         enumValues: []
         custom: []
@@ -294,7 +294,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-10-14'
       e_dt: '2023-10-15'
-      search: aut
+      search: asperiores
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -341,7 +341,7 @@ endpoints:
         name: user_name
         description: '유저 ID.'
         required: true
-        example: similique
+        example: dolor
         type: string
         enumValues: []
         custom: []
@@ -357,7 +357,7 @@ endpoints:
         name: mcht_name
         description: '가맹점 상호.'
         required: true
-        example: omnis
+        example: vero
         type: string
         enumValues: []
         custom: []
@@ -365,7 +365,7 @@ endpoints:
         name: addr
         description: 주소.
         required: true
-        example: laudantium
+        example: aliquam
         type: string
         enumValues: []
         custom: []
@@ -397,7 +397,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: perferendis
+        example: maiores
         type: string
         enumValues: []
         custom: []
@@ -445,7 +445,7 @@ endpoints:
         name: use_saleslip_prov
         description: '매출전표 공급자 정보.'
         required: true
-        example: true
+        example: false
         type: boolean
         enumValues: []
         custom: []
@@ -453,7 +453,7 @@ endpoints:
         name: use_saleslip_sell
         description: '매출전표 판매자 정보.'
         required: true
-        example: false
+        example: true
         type: boolean
         enumValues: []
         custom: []
@@ -533,20 +533,20 @@ endpoints:
         name: user_pw
         description: '유저 패스워드'
         required: false
-        example: corporis
+        example: consequatur
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: similique
-      mcht_name: omnis
-      addr: laudantium
-      acct_bank_name: perferendis
+      user_name: dolor
+      mcht_name: vero
+      addr: aliquam
+      acct_bank_name: maiores
       enabled: true
-      use_saleslip_prov: true
-      use_saleslip_sell: false
+      use_saleslip_prov: false
+      use_saleslip_sell: true
       is_show_fee: false
-      user_pw: corporis
+      user_pw: consequatur
     fileParameters:
       passbook_file: null
       contract_file: null
@@ -583,12 +583,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 16
+        example: 6
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 16
+      id: 6
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -634,12 +634,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 17
+        example: 12
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 17
+      id: 12
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -647,7 +647,7 @@ endpoints:
         name: user_name
         description: '유저 ID.'
         required: true
-        example: et
+        example: velit
         type: string
         enumValues: []
         custom: []
@@ -663,7 +663,7 @@ endpoints:
         name: mcht_name
         description: '가맹점 상호.'
         required: true
-        example: autem
+        example: non
         type: string
         enumValues: []
         custom: []
@@ -671,7 +671,7 @@ endpoints:
         name: addr
         description: 주소.
         required: true
-        example: excepturi
+        example: quos
         type: string
         enumValues: []
         custom: []
@@ -703,7 +703,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: quia
+        example: laboriosam
         type: string
         enumValues: []
         custom: []
@@ -743,7 +743,7 @@ endpoints:
         name: enabled
         description: validation.attributes.enabled.
         required: true
-        example: true
+        example: false
         type: boolean
         enumValues: []
         custom: []
@@ -751,7 +751,7 @@ endpoints:
         name: use_saleslip_prov
         description: '매출전표 공급자 정보.'
         required: true
-        example: true
+        example: false
         type: boolean
         enumValues: []
         custom: []
@@ -759,7 +759,7 @@ endpoints:
         name: use_saleslip_sell
         description: '매출전표 판매자 정보.'
         required: true
-        example: false
+        example: true
         type: boolean
         enumValues: []
         custom: []
@@ -783,7 +783,7 @@ endpoints:
         name: is_show_fee
         description: '가맹점 수수료율 노출여부.'
         required: true
-        example: false
+        example: true
         type: boolean
         enumValues: []
         custom: []
@@ -836,14 +836,14 @@ endpoints:
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: et
-      mcht_name: autem
-      addr: excepturi
-      acct_bank_name: quia
-      enabled: true
-      use_saleslip_prov: true
-      use_saleslip_sell: false
-      is_show_fee: false
+      user_name: velit
+      mcht_name: non
+      addr: quos
+      acct_bank_name: laboriosam
+      enabled: false
+      use_saleslip_prov: false
+      use_saleslip_sell: true
+      is_show_fee: true
     fileParameters:
       passbook_file: null
       contract_file: null
@@ -880,12 +880,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 7
+        example: 6
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 7
+      id: 6
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
