--- a/.scribe/endpoints.cache/03.yaml
+++ b/.scribe/endpoints.cache/03.yaml
@@ -32,7 +32,7 @@ endpoints:
         name: domain
         description: ''
         required: true
-        example: laudantium
+        example: culpa
         type: string
         enumValues: []
         custom: []
@@ -40,7 +40,7 @@ endpoints:
         name: user_name
         description: ''
         required: true
-        example: dignissimos
+        example: expedita
         type: string
         enumValues: []
         custom: []
@@ -48,14 +48,14 @@ endpoints:
         name: user_pw
         description: ''
         required: true
-        example: ut
+        example: vel
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      domain: laudantium
-      user_name: dignissimos
-      user_pw: ut
+      domain: culpa
+      user_name: expedita
+      user_pw: vel
     fileParameters: []
     responses: []
     responseFields: []
@@ -91,12 +91,12 @@ endpoints:
         name: token
         description: ''
         required: true
-        example: perferendis
+        example: laboriosam
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      token: perferendis
+      token: laboriosam
     fileParameters: []
     responses: []
     responseFields: []
