--- a/.scribe/endpoints.cache/10.yaml
+++ b/.scribe/endpoints.cache/10.yaml
@@ -109,12 +109,12 @@ endpoints:
         name: user_pw
         description: '유저 패스워드'
         required: false
-        example: provident
+        example: et
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_pw: provident
+      user_pw: et
     fileParameters: []
     responses: []
     responseFields: []
@@ -146,12 +146,12 @@ endpoints:
         name: id
         description: '영업자 이력 PK'
         required: true
-        example: 2
+        example: 18
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 2
+      id: 18
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -197,12 +197,12 @@ endpoints:
         name: id
         description: 'The ID of the operator history.'
         required: true
-        example: illo
+        example: delectus
         type: string
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: illo
+      id: delectus
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -238,12 +238,12 @@ endpoints:
         name: id
         description: '이상거래 PK'
         required: true
-        example: 12
+        example: 3
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 12
+      id: 3
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
