--- a/.scribe/endpoints.cache/11.yaml
+++ b/.scribe/endpoints.cache/11.yaml
@@ -109,7 +109,7 @@ endpoints:
         name: pg_id
         description: PG사.
         required: true
-        example: pariatur
+        example: culpa
         type: string
         enumValues: []
         custom: []
@@ -117,7 +117,7 @@ endpoints:
         name: name
         description: 이름.
         required: true
-        example: nihil
+        example: veniam
         type: string
         enumValues: []
         custom: []
@@ -125,14 +125,14 @@ endpoints:
         name: trx_fee
         description: '거래 수수료.'
         required: true
-        example: quaerat
+        example: perspiciatis
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      pg_id: pariatur
-      name: nihil
-      trx_fee: quaerat
+      pg_id: culpa
+      name: veniam
+      trx_fee: perspiciatis
     fileParameters: []
     responses: []
     responseFields: []
@@ -164,12 +164,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 5
+        example: 8
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 5
+      id: 8
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -215,12 +215,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 16
+        example: 11
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 16
+      id: 11
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -228,7 +228,7 @@ endpoints:
         name: pg_id
         description: PG사.
         required: true
-        example: velit
+        example: eos
         type: string
         enumValues: []
         custom: []
@@ -236,7 +236,7 @@ endpoints:
         name: name
         description: 이름.
         required: true
-        example: necessitatibus
+        example: enim
         type: string
         enumValues: []
         custom: []
@@ -244,14 +244,14 @@ endpoints:
         name: trx_fee
         description: '거래 수수료.'
         required: true
-        example: ut
+        example: dicta
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      pg_id: velit
-      name: necessitatibus
-      trx_fee: ut
+      pg_id: eos
+      name: enim
+      trx_fee: dicta
     fileParameters: []
     responses: []
     responseFields: []
@@ -283,12 +283,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 10
+        example: 9
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 10
+      id: 9
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
