--- a/.scribe/endpoints.cache/25.yaml
+++ b/.scribe/endpoints.cache/25.yaml
@@ -448,12 +448,12 @@ endpoints:
         name: send_url
         description: ''
         required: true
-        example: voluptate
+        example: cumque
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      send_url: voluptate
+      send_url: cumque
     fileParameters: []
     responses: []
     responseFields: []
