--- a/.scribe/endpoints/07.yaml
+++ b/.scribe/endpoints/07.yaml
@@ -133,7 +133,7 @@ endpoints:
         name: search
         description: 검색어(제목)
         required: false
-        example: fuga
+        example: eum
         type: string
         enumValues: []
         custom: []
@@ -141,7 +141,7 @@ endpoints:
         name: type
         description: '검색타입(0=공지사항, 1=FAQ, 2=1:1문의)'
         required: false
-        example: delectus
+        example: esse
         type: string
         enumValues: []
         custom: []
@@ -150,8 +150,8 @@ endpoints:
       page_size: 20
       s_dt: '2023-10-14'
       e_dt: '2023-10-15'
-      search: fuga
-      type: delectus
+      search: eum
+      type: esse
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -214,7 +214,7 @@ endpoints:
         name: title
         description: 제목.
         required: true
-        example: qui
+        example: aut
         type: string
         enumValues: []
         custom: []
@@ -222,7 +222,7 @@ endpoints:
         name: content
         description: 본문.
         required: true
-        example: quia
+        example: vel
         type: string
         enumValues: []
         custom: []
@@ -230,7 +230,7 @@ endpoints:
         name: type
         description: 타입.
         required: true
-        example: et
+        example: similique
         type: string
         enumValues: []
         custom: []
@@ -238,15 +238,15 @@ endpoints:
         name: is_reply
         description: validation.attributes.is_reply.
         required: true
-        example: dolorum
+        example: molestias
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      title: qui
-      content: quia
-      type: et
-      is_reply: dolorum
+      title: aut
+      content: vel
+      type: similique
+      is_reply: molestias
     fileParameters: []
     responses: []
     responseFields: []
@@ -278,12 +278,12 @@ endpoints:
         name: id
         description: '공지사항 PK'
         required: true
-        example: 11
+        example: 4
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 11
+      id: 4
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -329,12 +329,12 @@ endpoints:
         name: id
         description: '공지사항 PK'
         required: true
-        example: 7
+        example: 6
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 7
+      id: 6
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -358,7 +358,7 @@ endpoints:
         name: title
         description: 제목.
         required: true
-        example: voluptas
+        example: minus
         type: string
         enumValues: []
         custom: []
@@ -366,7 +366,7 @@ endpoints:
         name: content
         description: 본문.
         required: true
-        example: iusto
+        example: qui
         type: string
         enumValues: []
         custom: []
@@ -374,7 +374,7 @@ endpoints:
         name: type
         description: 타입.
         required: true
-        example: velit
+        example: voluptatibus
         type: string
         enumValues: []
         custom: []
@@ -382,15 +382,15 @@ endpoints:
         name: is_reply
         description: validation.attributes.is_reply.
         required: true
-        example: totam
+        example: mollitia
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      title: voluptas
-      content: iusto
-      type: velit
-      is_reply: totam
+      title: minus
+      content: qui
+      type: voluptatibus
+      is_reply: mollitia
     fileParameters: []
     responses: []
     responseFields: []
@@ -422,12 +422,12 @@ endpoints:
         name: id
         description: '공지사항 PK'
         required: true
-        example: 15
+        example: 18
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 15
+      id: 18
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
