--- a/.scribe/endpoints/14.yaml
+++ b/.scribe/endpoints/14.yaml
@@ -71,7 +71,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: deleniti
+        example: eius
         type: string
         enumValues: []
         custom: []
@@ -79,7 +79,7 @@ endpoints:
         name: acct_bank_code
         description: 은행코드.
         required: true
-        example: rerum
+        example: est
         type: string
         enumValues: []
         custom: []
@@ -87,7 +87,7 @@ endpoints:
         name: acct_num
         description: 계좌번호.
         required: true
-        example: qui
+        example: reiciendis
         type: string
         enumValues: []
         custom: []
@@ -95,15 +95,15 @@ endpoints:
         name: acct_name
         description: 예금주.
         required: true
-        example: sunt
+        example: voluptatem
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      acct_bank_name: deleniti
-      acct_bank_code: rerum
-      acct_num: qui
-      acct_name: sunt
+      acct_bank_name: eius
+      acct_bank_code: est
+      acct_num: reiciendis
+      acct_name: voluptatem
     fileParameters: []
     responses: []
     responseFields: []
@@ -135,12 +135,12 @@ endpoints:
         name: id
         description: '정기등록카드 PK'
         required: true
-        example: 7
+        example: 14
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 7
+      id: 14
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -186,12 +186,12 @@ endpoints:
         name: id
         description: '정기등록카드 PK'
         required: true
-        example: 4
+        example: 11
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 4
+      id: 11
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -199,7 +199,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: placeat
+        example: nostrum
         type: string
         enumValues: []
         custom: []
@@ -207,7 +207,7 @@ endpoints:
         name: acct_bank_code
         description: 은행코드.
         required: true
-        example: provident
+        example: et
         type: string
         enumValues: []
         custom: []
@@ -215,7 +215,7 @@ endpoints:
         name: acct_num
         description: 계좌번호.
         required: true
-        example: perferendis
+        example: velit
         type: string
         enumValues: []
         custom: []
@@ -223,15 +223,15 @@ endpoints:
         name: acct_name
         description: 예금주.
         required: true
-        example: sequi
+        example: id
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      acct_bank_name: placeat
-      acct_bank_code: provident
-      acct_num: perferendis
-      acct_name: sequi
+      acct_bank_name: nostrum
+      acct_bank_code: et
+      acct_num: velit
+      acct_name: id
     fileParameters: []
     responses: []
     responseFields: []
@@ -263,12 +263,12 @@ endpoints:
         name: id
         description: '정기등록카드 PK'
         required: true
-        example: 6
+        example: 13
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 6
+      id: 13
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
