--- a/.scribe/endpoints/23.yaml
+++ b/.scribe/endpoints/23.yaml
@@ -153,7 +153,7 @@ endpoints:
         name: id
         description: ''
         required: true
-        example: 1
+        example: 6
         type: integer
         enumValues: []
         custom: []
@@ -161,13 +161,13 @@ endpoints:
         name: user_pw
         description: ''
         required: true
-        example: est
+        example: maxime
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      id: 1
-      user_pw: est
+      id: 6
+      user_pw: maxime
     fileParameters: []
     responses: []
     responseFields: []
@@ -265,7 +265,7 @@ endpoints:
         name: search
         description: '검색어(유저 ID)'
         required: false
-        example: explicabo
+        example: odio
         type: string
         enumValues: []
         custom: []
@@ -274,7 +274,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-10-14'
       e_dt: '2023-10-15'
-      search: explicabo
+      search: odio
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -321,7 +321,7 @@ endpoints:
         name: user_name
         description: '유저 ID.'
         required: true
-        example: veniam
+        example: aspernatur
         type: string
         enumValues: []
         custom: []
@@ -337,7 +337,7 @@ endpoints:
         name: sales_name
         description: '영업점 상호.'
         required: true
-        example: quo
+        example: quos
         type: string
         enumValues: []
         custom: []
@@ -345,7 +345,7 @@ endpoints:
         name: view_type
         description: validation.attributes.view_type.
         required: true
-        example: odio
+        example: reiciendis
         type: string
         enumValues: []
         custom: []
@@ -353,7 +353,7 @@ endpoints:
         name: level
         description: 유저등급.
         required: true
-        example: cumque
+        example: aut
         type: string
         enumValues: []
         custom: []
@@ -377,7 +377,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: consectetur
+        example: omnis
         type: string
         enumValues: []
         custom: []
@@ -425,7 +425,7 @@ endpoints:
         name: settle_tax_type
         description: validation.attributes.settle_tax_type.
         required: true
-        example: laudantium
+        example: quo
         type: string
         enumValues: []
         custom: []
@@ -433,7 +433,7 @@ endpoints:
         name: settle_cycle
         description: validation.attributes.settle_cycle.
         required: true
-        example: quam
+        example: ut
         type: string
         enumValues: []
         custom: []
@@ -497,19 +497,19 @@ endpoints:
         name: user_pw
         description: '유저 패스워드'
         required: false
-        example: enim
+        example: aut
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: veniam
-      sales_name: quo
-      view_type: odio
-      level: cumque
-      acct_bank_name: consectetur
-      settle_tax_type: laudantium
-      settle_cycle: quam
-      user_pw: enim
+      user_name: aspernatur
+      sales_name: quos
+      view_type: reiciendis
+      level: aut
+      acct_bank_name: omnis
+      settle_tax_type: quo
+      settle_cycle: ut
+      user_pw: aut
     fileParameters:
       passbook_file: null
       contract_file: null
@@ -546,12 +546,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 7
+        example: 18
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 7
+      id: 18
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
@@ -597,12 +597,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 5
+        example: 8
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 5
+      id: 8
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters:
@@ -610,7 +610,7 @@ endpoints:
         name: user_name
         description: '유저 ID.'
         required: true
-        example: quas
+        example: adipisci
         type: string
         enumValues: []
         custom: []
@@ -626,7 +626,7 @@ endpoints:
         name: sales_name
         description: '영업점 상호.'
         required: true
-        example: nemo
+        example: hic
         type: string
         enumValues: []
         custom: []
@@ -634,7 +634,7 @@ endpoints:
         name: view_type
         description: validation.attributes.view_type.
         required: true
-        example: provident
+        example: perferendis
         type: string
         enumValues: []
         custom: []
@@ -642,7 +642,7 @@ endpoints:
         name: level
         description: 유저등급.
         required: true
-        example: blanditiis
+        example: qui
         type: string
         enumValues: []
         custom: []
@@ -666,7 +666,7 @@ endpoints:
         name: acct_bank_name
         description: 은행명.
         required: true
-        example: quibusdam
+        example: voluptatem
         type: string
         enumValues: []
         custom: []
@@ -714,7 +714,7 @@ endpoints:
         name: settle_tax_type
         description: validation.attributes.settle_tax_type.
         required: true
-        example: provident
+        example: quo
         type: string
         enumValues: []
         custom: []
@@ -722,7 +722,7 @@ endpoints:
         name: settle_cycle
         description: validation.attributes.settle_cycle.
         required: true
-        example: quis
+        example: nulla
         type: string
         enumValues: []
         custom: []
@@ -783,13 +783,13 @@ endpoints:
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: quas
-      sales_name: nemo
-      view_type: provident
-      level: blanditiis
-      acct_bank_name: quibusdam
-      settle_tax_type: provident
-      settle_cycle: quis
+      user_name: adipisci
+      sales_name: hic
+      view_type: perferendis
+      level: qui
+      acct_bank_name: voluptatem
+      settle_tax_type: quo
+      settle_cycle: nulla
     fileParameters:
       passbook_file: null
       contract_file: null
@@ -826,12 +826,12 @@ endpoints:
         name: id
         description: '유저 PK'
         required: true
-        example: 14
+        example: 9
         type: integer
         enumValues: []
         custom: []
     cleanUrlParameters:
-      id: 14
+      id: 9
     queryParameters: []
     cleanQueryParameters: []
     bodyParameters: []
